--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
     <div class="row">
       <div class="col-md-12">
         <article>
-          Kuvaketta klikkaamalla pääset vastaamaan kuva-arvoituksiin tai kysymyksiin:
-          <br>
+          <p id="ohje" >Kuvaketta klikkaamalla pääset vastaamaan kuva-arvoituksiin tai kysymyksiin:</p>
           <br>
           <p>
             <a href="kuvakysymykset.html"><img src="images/Madame_de_Pompadour_blurred_text.jpg" alt="kuvakysymykset" id="kuvakysymyksetKuvake" class="kuvake"></a>
@@ -101,6 +100,8 @@
       </div>
     </div>  
     <!-- Bootstrap JS file -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" 
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
   </body>
 </html>
