--- a/kuvakysymykset.html
+++ b/kuvakysymykset.html
@@ -66,7 +66,7 @@
     <!-- questions-blocks below-->
     <div class="col-md-12 col-sm-12" id="ludvig"> 
       <a href="https://fi.wikipedia.org/wiki/Ludvig_XIV" target="picture">
-      <img src="images/Ludvig.jpg" class="kuva" alt="Ludvig_XIV">
+        <img src="images/Ludvig.jpg" class="kuva" alt="Ludvig_XIV">
       </a> 
       <input type="radio" name="answer" class="wrong"> C.G.E. Mannerheim<br>
       <input type="radio" name="answer" id="right1"> Ludvig XIV<br>
@@ -78,7 +78,7 @@
     </div>     
     <div class="col-md-12 col-sm-12" id="marie">
       <a href="https://fi.wikipedia.org/wiki/Marie_Curie" target="picture">
-      <img src="images/Marie.jpg" class="kuva" alt="Marie_Curie">
+        <img src="images/Marie.jpg" class="kuva" alt="Marie_Curie">
       </a>
       <input type="radio" name="answer"  class="wrong"> Pocahontas<br>
       <input type="radio" name="answer"  class="wrong"> Indira Gandhi<br>
@@ -90,7 +90,7 @@
     </div>
     <div class="col-md-12 col-sm-12" id="abraham" > 
       <a href="https://fi.wikipedia.org/wiki/Abraham_Lincoln" target="picture">
-      <img src="images/Abraham.jpg" class="kuva" alt="Abraham_Lincoln">
+        <img src="images/Abraham.jpg" class="kuva" alt="Abraham_Lincoln">
       </a>
       <input type="radio" name="answer" class="wrong"> Napoleon Bonaparte<br>
       <input type="radio" name="answer" class="wrong"> Kapteeni James Cook<br>
@@ -102,7 +102,7 @@
     </div>    
     <div class="col-md-12 col-sm-12" id="amelia">
       <a href="https://en.wikipedia.org/wiki/Amelia_Earhart" target="picture">
-      <img src="images/Amelia.jpg"   class="kuva" alt="Amelia_Earhart">
+        <img src="images/Amelia.jpg"   class="kuva" id= "ameliapic" alt="Amelia_Earhart">
       </a>
       <input type="radio" name="answer" class="wrong"> Frida Kahlo<br>
       <input type="radio" name="answer" id="right4"> Amelia Earhart<br>
@@ -114,7 +114,7 @@
     </div>
     <div class="col-md-12 col-sm-12" id="nelson" >
       <a href="https://www.publicdomainpictures.net/en/view-image.php?image=18473&picture=nelson-mandela" target="picture">
-      <img src="images/Nelson.jpg"  class="kuva" alt="Nelson_Mandela">
+        <img src="images/Nelson.jpg"  class="kuva" alt="Nelson_Mandela">
       </a>
       <input type="radio" name="answer" id="right5"> Nelson Mandela<br>
       <input type="radio" name="answer" class="wrong"> Katsushika Hokusai<br>
@@ -128,7 +128,7 @@
       <p id="feedbackEnd"> Hienoa! Sait kaikki oikein!</p>
       <button id="uudestaan" class="uudestaan" onclick="again()">Aloita alusta</button>
       <a href="https://pixabay.com/fi/photos/pyramidit-egypti-egyptil%c3%a4inen-2371501/" target="picture">
-      <img src="images/pyramid.jpg" class="kuva" alt="pyramid">  
+        <img src="images/pyramid.jpg" class="kuva" id="pyramidpic" alt="pyramid">  
       </a>  
     </div>      
     <!-- bootstrap progress-bar below -->
@@ -137,15 +137,18 @@
       <progress class="progress" id="progressBar" value="0" max="5"></progress>
     </div>
     <!-- bootstrap script below-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" 
-    crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" 
+      integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" 
+      crossorigin="anonymous">
     </script> 
     <!-- footer below --> 
     <div class="row">
       <div class="col-md-12">
           <footer>
               <p>Päivi Karhumaa (c) 2022 <br>
-                Kuvakysymysten kuvat on haettu internetistä, hakupäivä 11.5.2022. Kuvan lähde löytyy jokaisen kuvan takaa linkkinä, joten kuvaa klikkaamalla pääset alkuperäiselle sivulle. </p>
+                Kuvakysymysten kuvat on haettu internetistä, hakupäivä 11.5.2022. 
+                Kuvan lähde löytyy jokaisen kuvan takaa linkkinä, joten kuvaa klikkaamalla pääset alkuperäiselle sivulle. 
+              </p>
           </footer>
       </div>
     </div>
