--- a/paikat.html
+++ b/paikat.html
@@ -1,130 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Places</title>
-    <!--css from bootstrap below-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
-    rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <!-- own stylesheet below-->
-    <link rel="stylesheet" href="paikat.css">
-    <!-- JavaScript file -->
-    <script src="paikat.js" defer></script>    
-</head>
-<body>
+  <head>
+      <meta charset="UTF-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Places</title>
+      <!--css from bootstrap below-->
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
+      rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+      <!-- own stylesheet below-->
+      <link rel="stylesheet" href="paikat.css">
+      <!-- JavaScript file -->
+      <script src="paikat.js" defer></script>    
+  </head>
+  <body>
     <!-- Header below -->
     <header>
         <p id="historiikki">HISTORIIKKI <br></p> 
         <p id="lisätieto"> - Nähtävyyksiä historian harrastajille - </p> 
     </header>
-        <!-- Navigation from bootstrap-->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-              <a class="navbar-brand">Tästä muille sivuille:</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" 
-                aria-controls="navbarSupportedContent" 
-                aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link" href="index.html">Pääsivu</a>
-                  </li>  
-                  <li class="nav-item">
-                    <a class="nav-link" href="tekstikysymykset.html">Tiedä tai arvaa!</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="kuvakysymykset.html">Tunnista henkilöt</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="sivustotieto.html">Tietoja sivustosta</a>
-                  </li>
-                </ul>
-              </div>    
-            </div>
-          </nav>
-        <!-- Navigation ends-->    
+    <!-- Navigation from bootstrap-->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand">Tästä muille sivuille:</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" 
+          aria-controls="navbarSupportedContent" 
+          aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Pääsivu</a>
+            </li>  
+            <li class="nav-item">
+              <a class="nav-link" href="tekstikysymykset.html">Tiedä tai arvaa!</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="kuvakysymykset.html">Tunnista henkilöt</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="sivustotieto.html">Tietoja sivustosta</a>
+            </li>
+          </ul>
+        </div>    
+      </div>
+    </nav>
+    <!-- Navigation ends-->        
     <button id="exploreButton1" onclick="vaseBlock()">Tutki</button>
     <button id="exploreButton2" onclick="nijonBlock()">Tutki</button>
     <button id="exploreButton3" onclick="kukulcanBlock()">Tutki</button>
     <button id="exploreButton4" onclick="valtionhotelliBlock()">Tutki</button>
     <button id="exploreAgain" onclick="again()">Katso uudestaan</button>
-       <div class="container">
-        <div class="row">
-            <div class="col-md-3 col-sm-6" class="block" id="vaseblock">
-                <a href= "https://pixabay.com/fi/photos/maljakko-amfora-pompeji-italia-1538329/" target="picture" >
-                    <img src="images/vase.jpg"  class="kuva" id="vase">
-                </a>
-                <p> 
-                    Pompeji oli roomalainen kaupunki Italiassa.
-                    Se hautautui Vesuviuksen purkauksessa vuonna 79. 
-                    Pompeji on ollut laajojen arkeologisten tutkimusten kohteena vuodesta 1748 lähtien ja on 
-                    siksi parhaiten tunnettu antiikin maaseutukaupunki. Suuri osa kaupungista on yhä tutkimatta 
-                    ja uusia löytöjä tehdään usein. <a href="https://fi.wikipedia.org/wiki/Pompeji"> Lähde: Wikipedia</a>
-                </p>
-            </div>
-            <div class="col-md-3 col-sm-6" class="block" id="nijonblock">
-                <a href= "https://fi.wikipedia.org/wiki/Nij%C5%8Dn_linna" target="picture" >
-                    <img src="images/NinomaruPalace.jpg"  class="kuva" id="nijon">
-                </a>
-                <p> Nijōn on v. 1626 valmistunut linna Japanin Kiotossa. 
-                    Linnaan kuuluu mm. kaksi sisäkkäistä linnoituskehää ja Ninomaru-palatsi. 
-                    Linnan pinta-ala on 275 000 neliömetriä, josta rakennettu 7 300 neliömetriä.
-                    Sen alueella on useita puutarhoja sekä japaninkirsikka- ja japaninaprikoosimetsiköitä. 
-                    <a href="https://fi.wikipedia.org/wiki/Nij%C5%8Dn_linna"> Lähde: Wikipedia</a>
-                </p>
-            </div>
-            <div class="col-md-3 col-sm-6" class="block" id="kukulcanblock">
-                <a href= "https://pixabay.com/fi/photos/kukulcan-chichenitz%c3%a1-meksiko-2598724/" target="picture" >
-                    <img src="images/kukulcan-2598724_1280.jpg"  class="kuva" id="kukulcan">
-                </a>
-                <p> Meksikossa sijaitseva kuuluisa arkeologinen alue ja kaupunki, Chichén Itzá, on myös Unescon 
-                    maailmanperintökohde. Sen rakentamisen aloittivat mayat ja kaupunki olikin keskeinen paikka noin vuonna 600.
-                    Alueella sijaitsee useita kiinnostavia rakennelmia, kuten Kukulcan pyramidi.
-                    <a href="https://fi.wikipedia.org/wiki/Chich%C3%A9n_Itz%C3%A1"> Lähde: Wikipedia</a>
-                </p>
-            </div>
-            <div class="col-md-3 col-sm-6" class="block" id="valtionhotelliblock">
-                <a href= "https://pixabay.com/fi/photos/imatra-suomi-etel%c3%a4-karjala-3778397/" target="picture" >
-                    <img src="images/imatra.jpg"  class="kuva" id="valtionhotelli">
-                </a>
-                <p> Imatran Valtionhotelli on Imatrankosken partaalla sijaitseva, vuonna 1903 valmistunut 
-                    arkkitehti Usko Nyströmin suunnittelema jugendlinna, joka toimii edelleen hotellina. Hotelli on toiminut 
-                    mm. sotilassairaalana ja armeijan esikuntana. Hotellin kellarissa toimi myös toisen maailmansodan aikana 
-                    Imatran ilmatorjuntakeskus.
-                    <a href="https://fi.wikipedia.org/wiki/Imatran_Valtionhotelli"> Lähde: Wikipedia</a>
-                </p>
-            </div>
-            <!-- Maybe continue later with these next ideas  -->
+    <div class="container">
+      <div class="row">
+        <div class="col-md-3 col-sm-6" id="vaseblock">
+          <a href= "https://pixabay.com/fi/photos/maljakko-amfora-pompeji-italia-1538329/" target="picture" >
+            <img src="images/vase.jpg"  class="kuva" id="vase" alt="pompejivasepicture">
+          </a>
+          <p> 
+            Pompeji oli roomalainen kaupunki Italiassa.
+            Se hautautui Vesuviuksen purkauksessa vuonna 79. 
+            Pompeji on ollut laajojen arkeologisten tutkimusten kohteena vuodesta 1748 lähtien ja on 
+            siksi parhaiten tunnettu antiikin maaseutukaupunki. Suuri osa kaupungista on yhä tutkimatta 
+            ja uusia löytöjä tehdään usein. <a href="https://fi.wikipedia.org/wiki/Pompeji"> Lähde: Wikipedia</a>
+          </p>      
+        </div>
+        <div class="col-md-3 col-sm-6" id="nijonblock">
+          <a href= "https://fi.wikipedia.org/wiki/Nij%C5%8Dn_linna" target="picture" >
+            <img src="images/NinomaruPalace.jpg"  class="kuva" id="nijon" alt="nijonpalace">
+          </a>
+          <p> 
+            Nijōn on v. 1626 valmistunut linna Japanin Kiotossa. 
+            Linnaan kuuluu mm. kaksi sisäkkäistä linnoituskehää ja Ninomaru-palatsi. 
+            Linnan pinta-ala on 275 000 neliömetriä, josta rakennettu 7 300 neliömetriä.
+            Sen alueella on useita puutarhoja sekä japaninkirsikka- ja japaninaprikoosimetsiköitä. 
+            <a href="https://fi.wikipedia.org/wiki/Nij%C5%8Dn_linna"> Lähde: Wikipedia</a>
+          </p>
+        </div>      
+        <div class="col-md-3 col-sm-6" id="kukulcanblock">
+          <a href= "https://pixabay.com/fi/photos/kukulcan-chichenitz%c3%a1-meksiko-2598724/" target="picture" >
+            <img src="images/kukulcan-2598724_1280.jpg"  class="kuva" id="kukulcan" alt="kukulcanpyramid">
+          </a>      
+          <p> 
+            Meksikossa sijaitseva kuuluisa arkeologinen alue ja kaupunki, Chichén Itzá, on myös Unescon 
+            maailmanperintökohde. Sen rakentamisen aloittivat mayat ja kaupunki olikin keskeinen paikka noin vuonna 600.
+            Alueella sijaitsee useita kiinnostavia rakennelmia, kuten Kukulcan pyramidi.
+            <a href="https://fi.wikipedia.org/wiki/Chich%C3%A9n_Itz%C3%A1"> Lähde: Wikipedia</a>
+          </p>      
+        </div>
+        <div class="col-md-3 col-sm-6" id="valtionhotelliblock">
+          <a href= "https://pixabay.com/fi/photos/imatra-suomi-etel%c3%a4-karjala-3778397/" target="picture" >
+            <img src="images/imatra.jpg"  class="kuva" id="valtionhotelli" alt="valtionhotelli">
+          </a>       
+          <p> 
+            Imatran Valtionhotelli on Imatrankosken partaalla sijaitseva, vuonna 1903 valmistunut 
+            arkkitehti Usko Nyströmin suunnittelema jugendlinna, joka toimii edelleen hotellina. Hotelli on toiminut 
+            mm. sotilassairaalana ja armeijan esikuntana. Hotellin kellarissa toimi myös toisen maailmansodan aikana 
+            Imatran ilmatorjuntakeskus.
+            <a href="https://fi.wikipedia.org/wiki/Imatran_Valtionhotelli"> Lähde: Wikipedia</a>
+          </p>      
+        </div>
+            <!-- Maybe continue later with these next ideas that are marked as comments for now -->
             <!-- <div class="row">
-                <div class="col">
-                <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat sint, eaque necessitatibus voluptate atque aliquid 
-                    voluptatibus eligendi ducimus provident unde modi, animi voluptates fuga cumque a hic eius enim optio.
-                </p>
+                  <div class="col">
+                    <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat sint, eaque necessitatibus voluptate atque aliquid 
+                        voluptatibus eligendi ducimus provident unde modi, animi voluptates fuga cumque a hic eius enim optio.
+                    </p>
+                  </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col">
-                <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat sint, eaque necessitatibus voluptate atque aliquid 
-                    voluptatibus eligendi ducimus provident unde modi, animi voluptates fuga cumque a hic eius enim optio.
-                </p>
-                </div>
-            </div> -->
-    </div>   
-    <!-- <div class="row">
-        <div class="col-md-12"> -->
-        <!-- footer below -->
-        <footer>
-          <p>Päivi Karhumaa (c) 2022</p>
-        </footer>        
+                <div class="row">
+                  <div class="col">
+                    <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat sint, eaque necessitatibus voluptate atque aliquid 
+                        voluptatibus eligendi ducimus provident unde modi, animi voluptates fuga cumque a hic eius enim optio.
+                    </p>
+                  </div>
+                </div> -->
+      </div>   
+            <!-- <div class="row">
+              <div class="col-md-12"> -->
+      <!-- footer below -->
+      <footer>
+        <p>Päivi Karhumaa (c) 2022</p>
+      </footer>              
     </div>
-      </div> 
     <!-- bootstrap javascript below-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnik
-    T1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" 
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
-</body>
+  </body>
 </html>
