--- a/sivustotieto.html
+++ b/sivustotieto.html
@@ -1,60 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <!-- Required meta tags -->
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tietoa sivusta ja tekijästä</title>
-    <!-- Bootstrap CSS file -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" 
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <!-- own stylesheet, used SASS-->
-    <link rel="stylesheet" href="sivustotietoSASS/sivustotietocss/sivustotietoSCSS/newstyles.css">
-    <!-- JavaScript file -->
-    <script src="sivustotieto.js" defer></script>
-</head>
-<body>
-  <!-- Header below -->
-  <header>
-    <p class="sassHeadline"id="historiikki">HISTORIIKKI <br></p> 
-    <p id="lisätieto"> - Tietoa sivustosta ja tekijästä - </p> 
-</header>
-  <!-- Navbar from Bootstrap-->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand">Tästä muille sivuille:</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" 
-        aria-controls="navbarSupportedContent" 
-        aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Pääsivu</a>
-          </li>  
-          <li class="nav-item">
-            <a class="nav-link" href="tekstikysymykset.html">Tiedä tai arvaa!</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="paikat.html">Historiallisia paikkoja</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="kuvakysymykset.html">Tunnista henkilöt</a>
-          </li>
-        </ul>
-      </div>    
-    </div>
-  </nav>  
-  <!-- Navbar ends-->
-  <!-- information article starts -->
+  <head>
+      <!-- Required meta tags -->
+      <meta charset="UTF-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Tietoa sivusta ja tekijästä</title>
+      <!-- Bootstrap CSS file -->
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" 
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+      <!-- own stylesheet, used SASS-->
+      <link rel="stylesheet" href="sivustotietoSASS/sivustotietocss/sivustotietoSCSS/newstyles.css">
+      <!-- JavaScript file -->
+      <script src="sivustotieto.js" defer></script>
+  </head>
+  <body>
+    <!-- Header below -->
+    <header>
+      <p class="sassHeadline" id="historiikki">HISTORIIKKI <br></p> 
+      <p id="lisätieto"> - Tietoa sivustosta ja tekijästä - </p> 
+    </header>
+    <!-- Navbar from Bootstrap-->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand">Tästä muille sivuille:</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" 
+          aria-controls="navbarSupportedContent" 
+          aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Pääsivu</a>
+            </li>  
+            <li class="nav-item">
+              <a class="nav-link" href="tekstikysymykset.html">Tiedä tai arvaa!</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="paikat.html">Historiallisia paikkoja</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="kuvakysymykset.html">Tunnista henkilöt</a>
+            </li>
+          </ul>
+        </div>    
+      </div>
+    </nav>  
+    <!-- Navbar ends-->
+    <!-- information article starts -->
     <div class="row">
       <div class="col-md-6">
         <article>
-            <p class="info">Sivusto on julkaistu 5/2022 osana OAMK:n Webtekniikat-kurssia.<br></br></p>
-            <p class="info">Sivusto kehitettiin niillä tekniikoilla, joita on opintojen ensimmäisten neljän kuukauden aikana opetettu.<br></br></p>
-            <p class="info">Sivuston on tuottanut Päivi Karhumaa TIK22KM. <br></br></p>
+            <p class="info">Sivusto on julkaistu 5/2022 osana OAMK:n Webtekniikat-kurssia.<br></p>
+            <p class="info">Sivusto kehitettiin niillä tekniikoilla, joita on opintojen ensimmäisten neljän kuukauden aikana opetettu.<br></p>
+            <p class="info">Sivuston on tuottanut Päivi Karhumaa TIK22KM. <br></p>
             <p class="info">Kuvalähteinä on käytetty useita eri internetsivuja. Jokaisella sivulla on joko erillinen linkki, tai niiden hakulähteisiin pääsee klikkaamalla kuvaa.</p>
         </article>          
       </div>
@@ -70,6 +70,7 @@
     </div>  
     <!--Bootstrap JS file -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" 
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
   </body>
 </html>
