--- a/tekstikysymykset.html
+++ b/tekstikysymykset.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <!-- Tämän sivun HTML, CSS - ja JavaScript -koodiin on otettu alkuun mallia OAMK TIK22KM Ryhmä 16 projektityöstä /M.Rekinen (c) 2022.  -->
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kysymykset</title>
-    <!--Bootstrap CSS file -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" 
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <!-- Other CSS-files -->
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="tekstikysymykset.css">
-    <!-- Javascript-file -->
-    <script src="tekstikysymykset.js" defer></script>
-</head>
-<body>
+  <head>
+      <meta charset="UTF-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Kysymykset</title>
+      <!--Bootstrap CSS file -->
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" 
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+      <!-- Other CSS-files -->
+      <link rel="stylesheet" href="styles.css">
+      <link rel="stylesheet" href="tekstikysymykset.css">
+      <!-- Javascript-file -->
+      <script src="tekstikysymykset.js" defer></script>
+  </head>
+  <body>
     <!-- Header below -->
     <header > <p id="historiikki">HISTORIIKKI <br></p> <p id="lisätieto"> - Tiedä tai arvaa! - </p> </header>
     <!-- Navigation from bootstrap-->
@@ -46,73 +46,75 @@
     </nav>
     <!-- Navigation ends-->
     <article> 
-    <div id="kysymyksetHeading">
-    </div>
-      <div class="container">
-      <div id="quiz">
-        <div class="row">
-          <h1 id="result"></h1>
-        </div>
-        <div class="col-md-6 col-lg" id="progressinfo">
-          <p class="hidden" id="quesright">Kysymyksiä oikein <span id="correctAnswers"></span>/5</p>
-          <progress class="hidden" id="progressbar" value="" max="5"></progress>
-        </div>
+      <div id="kysymyksetHeading">
       </div>
+      <div class="container">
+        <div id="quiz">
+          <div class="row">
+            <h1 id="result"></h1>
+          </div>
+          <div class="col-md-6 col-lg" id="progressinfo">
+            <p class="hidden" id="quesright">Kysymyksiä oikein <span id="correctAnswers"></span>/5</p>
+            <progress class="hidden" id="progressbar" value="" max="5"></progress>
+          </div>
+        </div>  
         <div class="row">
-          <legend id="bigQuestion"></legend>
+          <div id="feedback"></div>
           <div class="col">
             <div id="question1"  class="visible">
-              <legend>Pompeji on Italialainen kaupunki, joka hautautui tulivuoren purkauksessa vuonna 79. Mikä tulivuori oli kyseessä?</legend><br>
-                <input type="radio" name="radioAnswer" id="right"> Vesuvius<br>
-                <input type="radio" name="radioAnswer" id="wrong"> Etna<br>
-                <input type="radio" name="radioAnswer" id="wrong"> St. Helens<br>
-                <input type="radio" name="radioAnswer" id="wrong"> Fagradalsfjall<br>
-                <!-- bootstrap button used-->
-                <button type="button" class="btn btn-primary" class="checkbutton checkbutton1" 
-                  onclick="question1()">Tarkista</button><br>
+              <p class = "bigger" >Pompeji on Italialainen kaupunki, joka hautautui tulivuoren purkauksessa vuonna 79. Mikä tulivuori oli kyseessä?</p><br>
+              <input type="radio" name="radioAnswer" id="right1"> Vesuvius<br>
+              <input type="radio" name="radioAnswer" class="wrong"> Etna<br>
+              <input type="radio" name="radioAnswer" class="wrong"> St. Helens<br>
+              <input type="radio" name="radioAnswer" class="wrong"> Fagradalsfjall<br>
+              <!-- bootstrap button used-->
+              <button type="button" class="btn btn-primary" class="checkbutton checkbutton1" 
+                onclick="question1()">Tarkista</button><br>      
             </div>
             <div id="question2" class="hidden">
-              <legend>Mammutit kehittyivät noin neljä miljoonaa vuotta sitten Afrikassa, josta ne levisivät Eurooppaan, 
-                Aasiaan ja Pohjois-Amerikkaan. Mikä oli mammuttien pääasiallista ravintoa?</legend><br>
-              <input type="radio" name="radioAnswer" id="wrong"> Hedelmät<br>
-              <input type="radio" name="radioAnswer" id="wrong"> Pikkunisäkkäät<br>
+              <p class = "bigger" >Mammutit kehittyivät noin neljä miljoonaa vuotta sitten Afrikassa, josta ne levisivät Eurooppaan, 
+                Aasiaan ja Pohjois-Amerikkaan. Mikä oli mammuttien pääasiallista ravintoa?</p><br>
+              <input type="radio" name="radioAnswer" class="wrong"> Hedelmät<br>
+              <input type="radio" name="radioAnswer" class="wrong"> Pikkunisäkkäät<br>
               <input type="radio" name="radioAnswer" id="right2"> Heinät ja sarat<br>
-              <input type="radio" name="radioAnswer" id="wrong"> Puiden latvukset<br>
+              <input type="radio" name="radioAnswer" class="wrong"> Puiden latvukset<br>
               <!-- bootstrap button used-->
               <button type="button" class="btn btn-primary" class="checkbutton checkbutton2" 
-                  onclick="question2()">Tarkista</button><br>
+                  onclick="question2()">Tarkista</button><br>  
             </div>        
             <div id="question3" class="hidden">
-              <legend>Faaraot olivat hallitsijoita v.3100 - 3000 eaa. Minkä maan kuninkaita he olivat?</legend><br>
-              <input type="radio" name="radioAnswer" id="wrong"> Ranska<br>
-              <input type="radio" name="radioAnswer" id="wrong"> Argentiina<br>
+              <p class = "bigger" >Faaraot olivat hallitsijoita v.3100 - 3000 eaa. Minkä maan kuninkaita he olivat?</p><br>
+              <input type="radio" name="radioAnswer" class="wrong"> Ranska<br>
+              <input type="radio" name="radioAnswer" class="wrong"> Argentiina<br>
               <input type="radio" name="radioAnswer" id="right3"> Egypti<br>
-              <input type="radio" name="radioAnswer" id="wrong"> Japani<br>
+              <input type="radio" name="radioAnswer" class="wrong"> Japani<br>
               <!-- bootstrap button used-->
               <button type="button" class="btn btn-primary" class="checkbutton checkbutton3" 
                   onclick="question3()">Tarkista</button><br>
-            </div>       
+            </div>  
             <div id="question4" class="hidden">
-              <legend>Ranskalainen Édouard de Laboulaye ja Frédéric Auguste Bartholdi suunnittelivat erään, 
-                lähes kaikille tutun monumentin. Mikä teos onkaan kyseessä?</legend><br>
-              <input type="radio" name="radioAnswer" id="wrong"> Pyramidit<br>
-              <input type="radio" name="radioAnswer" id="right4"> Vapaudenpatsas<br>
-              <input type="radio" name="radioAnswer" id="wrong"> Eiffel-torni<br>
-              <input type="radio" name="radioAnswer" id="wrong"> Suomenlinna<br>
+              <p class = "bigger">Luvig XIV oli Ranskan kuningas vuosina 1643 - 1715. Millä lempinimellä häntä kutsuttiin?</p><br>
+              <input type="radio" name="radioAnswer" id="right4"> Aurinkokuningas<br>
+              <input type="radio" name="radioAnswer" class="wrong"> Vuoristoneuvos<br>
+              <input type="radio" name="radioAnswer" class="wrong"> Kuuvaltias<br>
+              <input type="radio" name="radioAnswer" class="wrong"> Palvottu<br>
               <!-- bootstrap button used-->
               <button type="button" class="btn btn-primary" class="checkbutton checkbutton4" 
-                  onclick="question4()">Tarkista</button><br>
-            </div>        
+                  onclick="question4()">Tarkista
+              </button><br>
+            </div>
             <div id="question5" class="hidden">
-              <legend>Luvig XIV oli Ranskan kuningas vuosina 1643 - 1715. Millä lempinimellä häntä kutsuttiin?</legend><br>
-              <input type="radio" name="radioAnswer" id="right5"> Aurinkokuningas<br>
-              <input type="radio" name="radioAnswer" id="wrong"> Vuoristoneuvos<br>
-              <input type="radio" name="radioAnswer" id="wrong"> Kuuvaltias<br>
-              <input type="radio" name="radioAnswer" id="wrong"> Palvottu<br>
+              <p class = "bigger" >Ranskalainen Édouard de Laboulaye ja Frédéric Auguste Bartholdi suunnittelivat erään, 
+                lähes kaikille tutun monumentin. Mikä teos onkaan kyseessä?</p><br>
+              <input type="radio" name="radioAnswer" class="wrong"> Pyramidit<br>
+              <input type="radio" name="radioAnswer" id="right5"> Vapaudenpatsas<br>
+              <input type="radio" name="radioAnswer" class="wrong"> Eiffel-torni<br>
+              <input type="radio" name="radioAnswer" class="wrong"> Suomenlinna<br>
               <!-- bootstrap button used-->
               <button type="button" class="btn btn-primary" class="checkbutton checkbutton5" 
-                  onclick="question5()">Tarkista</button><br>
-            </div>
+                  onclick="question5()">Tarkista
+              </button><br>  
+            </div>        
             <!--Bootstrap cards-->
             <div class="row" id="cards">
               <div class="col">
@@ -131,14 +133,15 @@
           </div>
           <div class="row">
             <div class="col">
-              <button class="hidden"  id="uudestaan" onclick="uudestaan()">Kokeile uudestaan</button>
+              <button class="hidden"  id="uudestaan" onclick="uudestaan()">Kokeile uudestaan
+              </button>
               <br>
             </div>
           </div>
         </div>
       </div>
     </article>     
-    <!-- Bootstrap accordion below-->
+    <!-- Bootstrap accordion & footer below-->
     <div class="row">
       <div class="col-md-12">
         <footer>
@@ -153,14 +156,14 @@
               <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" 
                 data-bs-parent="#accordionFlushExample">
                 <div class="accordion-body">
-                    <p>Päivi Karhumaa (c) 2022</p>
+                  <p>Päivi Karhumaa (c) 2022</p>
                 </div>
               </div>
             </div>
           </div>  
         </footer>
       </div>
-    </div>   
+    </div>     
     <!-- Bootstrap JS file -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" 
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
