--- a/sivustotieto.html
+++ b/sivustotieto.html
@@ -53,9 +53,9 @@
       <div class="col-md-6">
         <article>
             <p class="info">Sivusto on julkaistu 5/2022 osana OAMK:n Webtekniikat-kurssia.<br></p>
-            <p class="info">Tekemisessä käytin niitä tekniikoita, joiden käyttöä harjoiteltiin ensimmäisten neljän kuukauden aikana.<br></p>
-            <p class="info">Sivuston on tuottanut Päivi Karhumaa TIK22KM. Sivustoa on tarkoitus kehittää lisää taitojen karttuessa. <br></p>
-            <p class="info">Kuvalähteinä on käytetty useita eri internetsivuja. Jokaisella sivulla on joko erillinen linkki, tai niiden hakulähteisiin pääsee klikkaamalla kuvaa.</p>
+            <p class="info">Sivuston on tuottanut Päivi Karhumaa TIK22KM.  <br></p>
+            <p class="info">Tekemisessä käytin niitä tekniikoita, joiden käyttöä harjoiteltiin ensimmäisten neljän kuukauden aikana. Sivustoa on tarkoitus kehittää lisää taitojen karttuessa.<br></p>
+            <p class="info">Kuva- ja tietolähteinä on käytetty useita eri internetsivuja. Jokaisella sivulla on joko erillinen linkki, tai niiden hakulähteisiin pääsee esimerkiksi klikkaamalla kuvaa.</p>
         </article>          
       </div>
         <div class="col-md-6" id="printHere"></div> 
